<resources>
    <string name="app_name">TVDB</string>
    <string name="facebook_app_id">1763168803976903</string>
    <string name="title_activity_dash_board">DashBoard</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_non_internet">NonInternetActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="no_internet">NO INTERNET</string>
    <string name="something_went_wrong">OOPS! Something went wrong</string>
    <string name="movie_click">Movie_Click</string>
    <string name="genre_click">Genre_Click</string>
    <string name="tv_click">tv_click</string>
    <string name="airing_today">airing_today</string>
    <string name="top_rated">top_rated</string>
    <string name="popular">popular</string>
    <string name="on_the_air">on_the_air</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="slider_click">Slider_click</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="tvdb">TVDB</string>
    <string name="Movie_Details">Movie Details</string>
    <string name="tv_list">Tv List</string>
    <string name="tv_details">Tv Details</string>
    <string name="recommended_movies">Recommended Movies</string>
    <string name="crew_list">Cast Crew List</string>
    <string name="tv_episodes">Tv Episodes</string>
    <string name="search">Search Movie/Tv</string>
    <string name="update_user">Update Info</string>
    <string name="movie_list">Movie List</string>
    <string name="firebase_storage">gs://tvdb-f388b.appspot.com/</string>
    <string name="watch_videos">View Videos</string>
    <string name="release_date">Release Dates</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="welcome">Welcome To TVDB</string>
</resources>
