<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:alpha=".8"
    android:background="@drawable/login_bg"
    android:orientation="vertical"
    tools:context="com.example.harshit.tvdb.Activities.LoginActivity">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_20"
            android:elevation="@dimen/elevation_10"
            android:shadowColor="@color/white"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textSize="@dimen/text_40"
            android:textStyle="bold|italic" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilFirstName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_50"
            android:theme="@style/customTextInputLayout">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:singleLine="true" />


        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilPasssword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_50"
            android:theme="@style/customTextInputLayout">

            <EditText
                android:id="@+id/et_pwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:singleLine="true" />


        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_50"
            android:layout_marginTop="@dimen/margin_10"
            android:orientation="horizontal">


            <Button
                android:id="@+id/btn_login"
                style="@style/buttonCustomStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".48"
                android:background="@drawable/button_bg"
                android:text="@string/login" />

            <Button
                android:id="@+id/btn_register"
                style="@style/buttonCustomStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/margin_5"
                android:layout_weight=".48"
                android:background="@drawable/button_bg"
                android:text="@string/register" />


        </LinearLayout>


        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_50"
            android:layout_margin="@dimen/margin_20" />


        <com.facebook.login.widget.LoginButton xmlns:facebook="http://schemas.android.com/apk/res-auto"
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin_5"
            android:layout_marginRight="@dimen/margin_5"
            android:layout_marginTop="@dimen/margin_10"
            android:paddingBottom="@dimen/padding_15"
            android:paddingTop="@dimen/padding_15"
            facebook:com_facebook_login_text="Log in" />


    </LinearLayout>

</RelativeLayout>
